[package]
name = "nannou_00"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou_egui = "0.5.0"
nannou = "0.18.1"
log = "0.4.20"
env_logger = "0.10.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
ctor = "0.2.5"
lazy_static = "1.4.0"